feat(auth):行为验证增加二次验证逻辑。fix(all):修复部分已知bug