@@ -1,70 +1,66 @@
 package com.yigongbao.module.system.auth.controller;
 
-import cloud.tianai.captcha.application.ImageCaptchaApplication;
 import cloud.tianai.captcha.application.vo.ImageCaptchaVO;
-import cloud.tianai.captcha.common.constant.CaptchaTypeConstant;
-import cloud.tianai.captcha.common.response.ApiResponse;
-import cloud.tianai.captcha.validator.common.model.dto.ImageCaptchaTrack;
-import cn.hutool.core.util.StrUtil;
+import com.yigongbao.common.result.Result;
+import com.yigongbao.module.system.auth.service.ImageCaptchaService;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.Collections;
+import java.util.Map;
 
 /**
+ * 图像行为验证码 Controller
+ * 提供滑动验证码生成与校验，校验成功后颁发 token 供登录接口二次验证
+ *
  * @author hanjor
- * @version 1.0
- * @date 2026/4/22 22:31
+ * @date 2026-04-22
  */
-
-@Tag(name = "图像验证码", description = "生成、校验图像验证码")
+@Tag(name = "图像行为验证码", description = "生成、校验行为验证码")
 @RestController
 @RequestMapping("/image-captch")
+@RequiredArgsConstructor
 public class ImageCaptchController {
 
-    @Autowired
-    private ImageCaptchaApplication application;
+    private final ImageCaptchaService imageCaptchaService;
 
     /**
      * 生成验证码
+     *
+     * @param type 验证码类型，默认滑块（SLIDER）
      * @return 验证码数据
      */
     @Operation(summary = "生成图像验证码", description = "参数非必填，默认滑块：SLIDER、ROTATE、WORD_IMAGE_CLICK、CONCAT")
-    @GetMapping("/genCaptcha")
-    public ApiResponse<ImageCaptchaVO> genCaptcha(@RequestParam(required = false) String type) {
-        // 1.生成验证码(该数据返回给前端用于展示验证码数据)
-        if (StrUtil.isEmpty(type)) {
-            type = CaptchaTypeConstant.SLIDER;
-        }
-        // 参数1为具体的验证码类型， 默认支持 SLIDER、ROTATE、WORD_IMAGE_CLICK、CONCAT 等验证码类型，详见： `CaptchaTypeConstant`类
-        return  application.generateCaptcha(type);
+    @PostMapping("/genCaptcha")
+    public Result<ImageCaptchaVO> genCaptcha(@RequestParam(required = false) String type) {
+        ImageCaptchaVO captchaVO = imageCaptchaService.generateCaptcha(type);
+        return Result.success(captchaVO);
     }
 
     /**
-     * 校验验证码
-     * @param data 验证码数据
-     * @return 校验结果
+     * 校验验证码并颁发二次验证 Token
+     * <p>
+     * 校验成功后，生成 UUID token 存入 Redis（默认 2 分钟有效期），
+     * 前端需将返回的 token 传入登录接口完成二次验证。
+     * token 验证成功后立即失效，不可重复使用。
+     *
+     * @param captchaId 验证码 id（由 genCaptcha 返回）
+     * @param trackData 滑动轨迹数据
+     * @return 校验成功后返回 token
      */
-    @Operation(summary = "校验验证码")
+    @Operation(summary = "校验验证码并颁发二次验证 Token")
     @PostMapping("/check")
-    @ResponseBody
-    public ApiResponse<?> checkCaptcha(@RequestBody Data data) {
-        ApiResponse<?> response = application.matching(data.getId(), data.getData());
-        if (response.isSuccess()) {
-            return ApiResponse.ofSuccess(Collections.singletonMap("id", data.getId()));
-        }
-        return response;
+    public Result<Map<String, String>> checkCaptcha(
+            @RequestParam String captchaId,
+            @RequestBody ImageCaptchaTrackDto trackData) {
+        String token = imageCaptchaService.verifyAndGenerateToken(captchaId, trackData.getData());
+        return Result.success(Map.of("token", token));
     }
 
     @lombok.Data
-    public static class Data {
-        // 验证码id,前端回传的验证码ID
-        private String  id;
-        // 验证码数据,前端回传的验证码轨迹数据
-        private ImageCaptchaTrack data;
+    public static class ImageCaptchaTrackDto {
+        /** 验证码轨迹数据 */
+        private cloud.tianai.captcha.validator.common.model.dto.ImageCaptchaTrack data;
     }
 }
-
-
